# dde-dock-display-center

./: CMakeLists.txt  README.md  dde-dock-display-center.desktop  dde-dock-reset-display.sh
cmake/: package-deb.descript
